# p2p/urls.py
@@ -1,11 +1,12 @@
 from rest_framework.routers import DefaultRouter
 from django.urls import path, include
-from .views import PurchaseRequestViewSet, health_check, UserViewSet
+from .views import PurchaseRequestViewSet, health_check, UserViewSet, PurchaseOrderViewSet
 from .views import TokenObtainPairViewCustom, TokenRefreshView, me, assign_role
 
 router = DefaultRouter()
 router.register(r'requests', PurchaseRequestViewSet, basename='requests')
 router.register(r'users', UserViewSet, basename='users')
+router.register(r'purchase-orders', PurchaseOrderViewSet, basename='purchaseorders')
 
 urlpatterns = [
     path('health/', health_check, name='health'),
